overwrite old files

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "collegestuffsalenode",
+  "name": "collegestuffsale",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
