--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt": "^0.8.7",
     "body-parser": "^1.15.2",
+    "csurf": "^1.9.0",
     "express": "^4.14.0",
     "mongoose": "^4.6.2"
   },
