move to app directory

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URI=mongodb://dbuser:123456@ds139715.mlab.com:39715/collegestuffsale
+PROD_MONGODB_URI=mongodb://dbuser:123456@ds139715.mlab.com:39715/collegestuffsale
+DEV_MONGODB_URI=mongodb://localhost:27017/collegestuffsale
